# kisakcod

./: .gitignore  3qaslkjclbr4asmohpj7fmuqcngnein2  CMakeLists.txt  DOLT_REMOTE.md  README.md  build-win.ps1  manifest
.github/workflows/: ci.yml  licensed-smoke.yml  release.yml
docs/: CODEBASE_AUDIT.md  FUTURE_SESSION_HANDOFF.md  PORTING.md  UPSTREAM_2164CD1A_LEDGER.md  UPSTREAM_4AD0A2E2_LEDGER.md  ki-gw6-adapter-integration-scope.md  task.md
scripts/: common_files.cmake  platform_sources.cmake  post_build.cmake  pre_build.cmake  source_groups.cmake  stack_budget.cmake
scripts/ci/: check-fx-archive-stack.ps1  smoke-dedicated.ps1
scripts/dedi/: CMakeLists.txt  dedi_sources.cmake
scripts/mp/: CMakeLists.txt  mp_files.cmake
scripts/sp/: CMakeLists.txt  sp_files.cmake
src/DynEntity/: DynEntity_pieces.cpp
src/EffectsCore/: fx_archive.cpp  fx_archive_body_state_disk32.cpp  fx_archive_body_state_disk32.h  fx_archive_buffers_disk32.cpp  fx_archive_buffers_disk32.h  fx_archive_capacity.h  fx_archive_disk32.cpp  fx_archive_disk32.h  fx_archive_gate_control.cpp  fx_archive_gate_control.h  fx_archive_key.h  fx_archive_native_disk32.cpp  fx_archive_native_disk32.h  fx_archive_physics_batch_control.cpp  fx_archive_physics_batch_control.h  fx_archive_reader_disk32.cpp  fx_archive_reader_disk32.h  fx_archive_restore_candidate_disk32.cpp  fx_archive_restore_candidate_disk32.h  fx_archive_restore_control.cpp  fx_archive_restore_control.h  fx_archive_restore_workspace.h  fx_archive_semantics.cpp  fx_archive_semantics.h  fx_archive_system_disk32.cpp  fx_archive_system_disk32.h  fx_convert.cpp  fx_draw.cpp  fx_effect_def.h  fx_effect_table_restore.cpp  fx_effect_table_restore.h  fx_effect_table_save.cpp  fx_effect_table_save.h  fx_fastfile_disk32.h  fx_fastfile_impact_native_disk32.cpp  fx_fastfile_impact_native_disk32.h  fx_fastfile_native_arena.cpp  fx_fastfile_native_arena.h  fx_fastfile_native_disk32.cpp  fx_fastfile_native_disk32.h  (+20 more)
src/aim_assist/: aim_assist.cpp  aim_assist.h  aim_assist_safety.h
src/bgame/: bg_hudelem.h  bg_local.h  bg_misc.cpp  bg_pmove.cpp  bg_public.h  bg_target_protocol.h  bg_vehicle_material_time.h  bg_weapons.cpp  bg_weapons_load_obj.cpp
src/cgame/: cg_compass.cpp  cg_consolecmds.cpp  cg_draw.cpp  cg_draw_debug.cpp  cg_effects_load_obj.cpp  cg_ents.cpp  cg_event.cpp  cg_hudelem.cpp  cg_hudelem_sort.h  cg_info.cpp  cg_local.h  cg_localents.cpp  cg_main.cpp  cg_main.h  cg_modelpreviewer.cpp  cg_modelpreviewer.h  cg_pose_atomic.h  cg_pose_utils.cpp  cg_predict.cpp  cg_scoreboard.cpp  cg_servercmds.cpp  cg_snapshot.cpp  cg_vehicle_hud.cpp  cg_view.cpp  cg_visionsets.cpp  cg_weapons.cpp
src/cgame_mp/: cg_ents_mp.cpp  cg_snapshot_mp.cpp  cg_vehicles_mp.cpp  dedicated_cgame.cpp
src/client/: cl_cgame.cpp  cl_console.cpp  cl_demo.cpp  cl_input.cpp  cl_main.cpp  cl_parse.cpp  cl_pose.cpp  cl_scrn.cpp  client.h  con_channels.cpp
src/client_mp/: cl_cgame_mp.cpp  cl_input.cpp  cl_main_mp.cpp  cl_main_pc_mp.cpp  cl_parse_mp.cpp  cl_pose_mp.cpp  client_mp.h
src/database/: database.h  db_asset_mode.h  db_disk32.h  db_file_load.cpp  db_fx_zone_adapter_wiring.cpp  db_fx_zone_adapter_wiring.h  db_load.cpp  db_load_atomic.h  db_load_legacy_bridge.cpp  db_load_legacy_bridge.h  db_memory.cpp  db_referenced_fastfile.h  db_registry.cpp  db_registry_ownership_coordinator.cpp  db_registry_ownership_coordinator.h  db_relocation.cpp  db_relocation.h  db_script_string_adapter.cpp  db_script_string_adapter.h  db_script_string_journal.cpp  db_script_string_journal.h  db_script_string_transaction.cpp  db_script_string_transaction.h  db_stream.cpp  db_stream.h  db_stream_load.cpp  db_stream_state.h  db_stringtable_load.cpp  db_validation.h  db_xasset_disk32.cpp  db_xasset_disk32.h  db_zone_load_context.cpp  db_zone_load_context.h  db_zone_memory.h  db_zone_pending_copy_ledger.cpp  db_zone_pending_copy_ledger.h  db_zone_runtime_callback_context.cpp  db_zone_runtime_callback_context.h  db_zone_runtime_facade.cpp  db_zone_runtime_facade.h  (+12 more)
src/game/: actor.cpp  actor.h  actor_aim.cpp  actor_badplace.cpp  actor_corpse.cpp  actor_dog_exposed.cpp  actor_event_listeners.cpp  actor_grenade.cpp  actor_grenade_prediction_cache.h  actor_grenade_safety.h  actor_navigation.cpp  actor_navigation.h  actor_navigation_geometry.h  actor_script_cmd.cpp  actor_senses.cpp  actor_threat.cpp  g_main.h  (+24 more)
tests/: CMakeLists.txt  abi_atomics_tests.cpp  abi_sizeof_debt.allow  abi_sizeof_debt_test.cmake  abi_sizeof_formula_debt.allow  actor_grenade_prediction_cache_tests.cpp  actor_grenade_safety_source_test.cmake  actor_grenade_safety_tests.cpp  actor_navigation_geometry_tests.cpp  actor_navigation_source_test.cmake  cg_pose_atomic_tests.cpp  db_asset_mode_tests.cpp  db_facade_table_controller_coordinator_registry_callback_retry_tests.cpp  db_fx_zone_adapter_wiring_tests.cpp  db_load_atomic_tests.cpp  db_load_legacy_bridge_production_seal_tests.cpp  db_load_legacy_bridge_tests.cpp  db_referenced_fastfile_tests.cpp  db_registry_ownership_coordinator_production_seal_tests.cpp  db_registry_ownership_coordinator_source_test.cmake  db_registry_ownership_coordinator_tests.cpp  db_relocation_tests.cpp  db_script_string_adapter_tests.cpp  db_script_string_disk32_source_test.cmake  db_script_string_disk32_tests.cpp  db_script_string_journal_source_test.cmake  db_script_string_journal_tests.cpp  db_script_string_ownership_source_test.cmake  db_validation_tests.cpp  db_xasset_disk32_source_test.cmake  db_xasset_disk32_tests.cpp  db_zone_load_context_source_test.cmake  db_zone_load_context_tests.cpp  db_zone_pending_copy_ledger_production_seal_tests.cpp  db_zone_pending_copy_ledger_source_test.cmake  db_zone_pending_copy_ledger_tests.cpp  db_zone_runtime_callback_context_production_object_seal_test.cmake  db_zone_runtime_callback_context_production_seal_tests.cpp  db_zone_runtime_callback_context_source_test.cmake  db_zone_runtime_callback_context_tests.cpp  (+122 more)
tests/fixtures/abi_sizeof/: direct.allow  formula.allow
tests/fixtures/abi_sizeof/src/: test.cpp
tests/fixtures/headless_include_debt/: physical_lines.txt
(+260 files in other folders)
